# AffinityVM

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: default.yaml
md_engine/: Cargo.toml
md_engine/src/: lib.rs
scripts/: benchmark.py  train.py
src/affinityvm/: __init__.py  autograd.py  engine.py  featurizer.py  model.py  pipeline.py
src/affinityvm/scripts/: benchmark.py  train.py
tests/: test_autograd.py  test_engine.py  test_model.py
